--- a/package.json
+++ b/package.json
@@ -3,17 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "emoji-picker-react": "^3.4.4",
     "firebase": "^8.3.1",
+    "firebase-tools": "^9.8.0",
+    "mic-recorder-to-mp3": "^2.2.2",
     "react": "^17.0.1",
     "react-chat-elements": "^10.14.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stopwatch": "^2.0.4",
+    "react-voice-recorder": "^2.0.7",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
